--- a/Werd/Werd.vcxproj.filters
+++ b/Werd/Werd.vcxproj.filters
@@ -23,5 +23,11 @@
     <Text Include="sgb-words.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="20k.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="combinedList.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
